# ELF

./: .clang-format  .flake8  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  Makefile.basic  README.rst  allkill.sh  allmake.sh  alltest.sh  alltestold.sh  checkwinner.sh  diff.sh  differentiator_go_tasks.sh  edit.sh  find.sh  fromscratchcompile.sh  goletustest.sh  goletustest_client.sh  goviewserverlog.sh  internalfulldiff.sh  letustest.sh  letustest_check.sh  letustest_client.sh  letustest_clientold.sh  letustestold.sh  manyedit.sh  plotwinrate.sh  point.sh  view.sh  viewstatistics.sh
examples/tutorial/: CMakeLists.txt  README.md  game.h  test_elf.h
src_cpp/elf/: CMakeLists.txt  Pybind.cc  Pybind.h  pybind_module.cc
src_cpp/elf/ai/: ai.h
src_cpp/elf/ai/tree_search/: Pybind.cc  Pybind.h  mcts.h  tree_search.h  tree_search_alg.h  tree_search_base.h  tree_search_edgeinfo.h  tree_search_node.h  tree_search_options.h
src_cpp/elf/base/: common.h  context.h  ctrl.h  dispatcher.h  extractor.h  game_base.h  game_client_interface.h  game_context.h  game_interface.h  hist.h  options.h  remote_common.h  remote_context.h  remote_receiver.h  remote_sender.h  sharedmem.h  sharedmem_serializer.h
src_cpp/elf/comm/: base.h  broadcast.h  comm.h  primitive.h
src_cpp/elf/concurrency/: ConcurrentQueue.h  Counter.cc  Counter.h  TBBHashers.h
src_cpp/elf/distri/: CMakeLists.txt  Pybind.cc  Pybind.h  client.h  client_manager.cc  client_manager.h  client_manager_def.h  dispatcher_callback.h  feature.h  game_interface.h  options.h  record.h  server.h  stuff.h
src_cpp/elf/distributed/: addrs.h  data_loader.h  options.h  shared_reader.h  shared_replay_buffer.h  shared_rw_buffer2.h  shared_rw_buffer3.h  zmq_util.h
src_cpp/elf/interface/: common.h  data_block.h  decorator.h  extractor.h  game_base.h  game_client_interface.h  game_interface.h  hist.h  sharedmem_data.h  snippets.h  snippets_pybind.h
src_cpp/elf/legacy/: pybind_helper.h  python_options_utils_cpp.h
src_cpp/elf/logging/: IndexedLoggerFactory.cc  IndexedLoggerFactory.h  Levels.cc  Levels.h  Pybind.cc  Pybind.h
src_cpp/elf/options/: OptionMap.cc  OptionMap.h  OptionMapTest.cc  OptionSpec.cc  OptionSpec.h  OptionSpecTest.cc  OptionSpecTest.h  Pybind.cc  Pybind.h  pybind_utils.h  reflection_option.h
src_cpp/elf/utils/: base64.h  json_utils.h  member_check.h  pybind.h  reflection.h  reflection_utils.h  utils.h
src_cpp/elfgames/go/: CMakeLists.txt  Pybind.cc  README.md  client_manager.cc  client_manager.h  ctrl_selfplay.h  ctrl_utils.h  data_loader.h  fair_pick.h  game_context.h  game_ctrl.h  game_feature.h  game_selfplay.cc  game_selfplay.h  game_stats.h  game_train.cc  game_train.h  game_utils.h  go_game_specific.h  go_state_ext.cc  go_state_ext.h  record.h
src_cpp/elfgames/go/base/: board.cc  board.h  board_feature.cc  board_feature.h  board_feature_test.cc  common.cc  common.h  go_common.h  go_state.cc  go_state.h  go_test.cc
src_cpp/elfgames/go/base/test/: coord_test.cc  go_state_speed_test.cc  go_test.cc  symmetry_test.cc  test_utils.h
src_cpp/elfgames/go/common/: dispatcher_callback.h  game_base.h  game_feature.h  game_selfplay.cc  game_selfplay.h  game_stats.h  go_game_specific.h  go_state_ext.cc  go_state_ext.h  model_pair.h  notifier.h  record.h
src_cpp/elfgames/go/ctrl/: ctrl_eval.h  ctrl_selfplay.h  ctrl_utils.h  game_ctrl.h
src_cpp/elfgames/go/ctrl/stats/: fair_pick.h  game_stats.h
src_cpp/elfgames/go/elf_adaptor/: client_wrapper.h  game_feature.h  game_selfplay.cc  game_selfplay.h  game_train.h  server_wrapper.h
src_cpp/elfgames/go/elf_adaptor/inference/: Pybind.cc  Pybind.h
src_cpp/elfgames/go/elf_adaptor/mcts/: mcts.h
src_cpp/elfgames/go/elf_adaptor/train/: Pybind.cc
src_cpp/elfgames/go/inference/: Pybind.cc  game_context.h  pybind_module.cc
src_cpp/elfgames/go/mcts/: ai.h  mcts.h  mcts_test.cc
src_cpp/elfgames/go/sgf/: sgf.cc  sgf.h  sgf_test.cc
src_cpp/elfgames/go/state/: game_utils.h  go_game_specific.h  go_state_ext.h  model_pair.h  record.h
src_cpp/elfgames/go/train/: Pybind.cc  client_manager.cc  client_manager.h  client_wrapper.h  ctrl_eval.h  ctrl_selfplay.h  data_loader.h  distri_base.h  distri_client.h  distri_server.h  fair_pick.h  game_context.h  game_ctrl.h  game_train.cc  game_train.h  server_wrapper.h
src_cpp/elfgames/tasks/: CMakeLists.txt  Game.h
src_cpp/elfgames/tasks/base/: board.h  board_feature.cc  board_feature.h  common.h  go_common.h  go_state.h  hash_num.h
src_cpp/elfgames/tasks/common/: game_base.h  game_feature.h  game_selfplay.cc  game_selfplay.h  go_game_specific.h  go_state_ext.cc  go_state_ext.h  notifier.h  record.h
src_cpp/elfgames/tasks/elf2codingenv/include/: cursesapp.h  cursesm.h  cursesw.h  default.h  etip.h  fakemysql.h  fakepq.h  fakesql.h  ffi.h  ffitarget.h  histedit.h  itcl.h  itcl2TclOO.h  itclDecls.h  itclInt.h  itclIntDecls.h  itclMigrate2TclCore.h  itclTclIntStubsFcn.h  ks_names.h  lzma.h  menu.h  mysqlStubs.h  odbcStubs.h  pqStubs.h  sqlite3.h  sqlite3ext.h  tcl.h  tclDecls.h  tclOO.h  tclOODecls.h  tclPlatDecls.h  tclThread.h  tclTomMath.h  tclTomMathDecls.h  tdbc.h  tdbcDecls.h  tdbcInt.h  termcap.h  tic.h  tk.h  (+29 more)
src_cpp/elfgames/tasks/elf2codingenv/include/editline/: readline.h
src_cpp/elfgames/tasks/elf2codingenv/include/lzma/: base.h  bcj.h  block.h  check.h  container.h  delta.h  filter.h  hardware.h  index.h  index_hash.h  lzma12.h  stream_flags.h  version.h  vli.h
src_cpp/elfgames/tasks/elf2codingenv/include/ncurses/: cursesp.h  cursslk.h  form.h  nc_tparm.h  panel.h  term.h
src_cpp/elfgames/tasks/inference/: Pybind.cc  Pybind.h  game_context.h  pybind_module.cc
src_cpp/elfgames/tasks/mcts/: ai.h  mcts.h  mcts_test.cc
src_cpp/elfgames/tasks/train/: Pybind.cc  Pybind.h  client_manager.h  ctrl_selfplay.h  ctrl_utils.h  data_loader.h  distri_client.h  distri_server.h  game_context.h  game_ctrl.h  game_train.cc  game_train.h  pybind_module.cc
src_cpp/elfgames/tutorial/: CMakeLists.txt  pybind_module.cc  test_elf.h  test_elf_python.py
(+1185 files in other folders)
